Upload and manage img

--- a/django_website/main/templates/main/header.html
+++ b/django_website/main/templates/main/header.html
@@ -44,7 +44,7 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12-p-0 col-sm-12">
 					{% include 'main/includes/messaging.html' %} {% block content %}
-					<!-- Here will be our homepage,articles,profiles and etc... -->
+					<!-- test -->
 					{% endblock %}
 				</div>
 			</div>
