--- a/django_website/main/static/main/main.css
+++ b/django_website/main/static/main/main.css
@@ -164,3 +164,28 @@ a.article-title:hover {
   line-height: 28px !important;
   font-size: 22px !important;
 }
+
+.aspect-ratio-box {
+  position: relative;
+}
+
+.aspect-ratio-box::after{
+  display: block;
+  content: '';
+  /* 16:9 aspect ratio, 9 / 16 * 100% = 56.25% */
+  padding-bottom: 56.25%;
+}
+
+.aspect-ratio-box img {
+  position: absolute;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.profile-image {
+  width: 125px;
+  height: 125px;
+  padding: 5px;
+}
